--- a/views/groups/new.ejs
+++ b/views/groups/new.ejs
@@ -1,3 +1,5 @@
+<%- include("../partials/header.ejs") %> 
+
 <form action="/groups" method="post">
 
     <div>
@@ -19,3 +21,4 @@
     <br>
     <button type="submit">Create Group</button>
 </form>
+<%- include("../partials/footer.ejs") %> 
