--- a/views/groups/edit.ejs
+++ b/views/groups/edit.ejs
@@ -1,3 +1,5 @@
+<%- include("../partials/header.ejs") %> 
+<%- include("../partials/nav.ejs") %> 
 <form action="/groups/<%=  foundGroup._id %>?_method=PUT" method="post">
     <h1>Edit Group</h1>
     <div>
@@ -19,3 +21,4 @@
     <br>
     <button type="submit">Edit Group</button>
 </form>
+<%- include("../partials/footer.ejs") %> 
