--- a/views/groups/show.ejs
+++ b/views/groups/show.ejs
@@ -6,3 +6,4 @@
     <button type="submit">Delete</button>
 </form>
 <a href="/groups/<%= foundData._id %>/edit">Update</a>
+<a href="/groups">Back To view All Groups</a>
