--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 
 <header id="header-content">
     <nav>
-        <a href="" id="logo">my chama</a>
+        <a href="/" id="logo">my chama</a>
         <ul>
             <li><a href="">Login</a></li>
             <li><a href="">Sign Up</a></li>
@@ -24,7 +24,7 @@
     align-items: center;
     background-color: rgb(29, 26, 24);
     padding:0 1.25rem;
-    height: 80px;
+    height: 60px;
 }
 #logo{
     text-decoration: none;
